check issue for fill > stretch

--- a/sass/components/_aboutUs.scss
+++ b/sass/components/_aboutUs.scss
@@ -35,7 +35,7 @@
         display: flex;
         left: 0;
         top: 0;
-        height: 100%;
+        height: stretch;
         width: 100%;
         justify-content: center;
         align-items: center;
