--- a/styles/style.css
+++ b/styles/style.css
@@ -591,7 +591,7 @@ body {
     display: flex;
     left: 0;
     top: 0;
-    height: 100%;
+    height: stretch;
     width: 100%;
     justify-content: center;
     align-items: center;
